src/component/auth/SignupForm.css
.signup-section {
  padding: 0;
  display: flex;
  flex-direction: column;
  gap: 2rem;
}

.signup-header {
  font-family: "Outfit", sans-serif;
  text-transform: none;
  font-weight: 600;
  margin-bottom: -0.2rem;
}

.signup-header-wrapper {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.signup-checkout-subheader {
  font-size: 0.8rem;
  font-weight: 300;
}

.signup-benefits {
  display: flex;
  flex-wrap: wrap;
  /* flex-direction: column; */
  gap: 1rem;
}

.signup-benefits * {
  display: flex;
  align-items: center;
  gap: 0.4rem;
  font-size: 0.7rem;
  font-weight: 300;
}

.signup-form {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.signup-input-fields-wrapper {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  font-size: 0.8rem;
}

.signup-input-fields-wrapper > *,
.names-and-email-signup-form {
  display: flex;
  flex-direction: column;
}

.signup-input-fields-wrapper label {
  font-family: "Outfit", sans-serif;
}

.signup-input-fields-wrapper input {
  font-family: "Anonymous Pro", monospace;
  font-size: 0.8rem;
  border-radius: 0.2rem;
  padding-inline: 0.5rem;
}

.feedback {
  /* color: rgba(0, 0, 0, 0.71); */

  display: flex;
  align-items: center;
  font-size: 0.75rem;
  font-weight: 300;
  gap: 0.2rem;
  opacity: 0.7;
}

@supports (-webkit-touch-callout: none) {
  .signup-input-fields-wrapper input {
    font-size: 1rem;
  }
}

.signup-login {
  text-align: center;
  font-size: 0.8rem;
  font-family: "Outfit", sans-serif;
}

.signup-action-btns {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
}

.signup-login-link {
  color: var(--brand-red-clr);
  font-weight: 500;
  font-family: "Outfit", sans-serif;
}

@media screen and (min-width: 1024px) {
  .signup-header {
    font-size: 28px;
  }

  .signup-checkout-subheader {
    font-size: 1rem;
  }

  .signup-benefits * {
    font-size: 13px;
  }

  .signup-input-fields-wrapper,
  .signup-login {
    font-size: 14px;
  }
}

